--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,16 @@
 {
   "require": {
-    "behat/behat": "3.0.*@stable",
-    "behat/mink": "1.5@stable",
-    "behat/mink-selenium2-driver": "*",
-    "behat/mink-extension": "*",
+    "behat/behat": "@stable",
+    "behat/mink": "1.6.*@stable",
+    "behat/mink-extension": "@stable",
+    "behat/mink-goutte-driver": "@stable",
+    "behat/mink-selenium2-driver": "@stable",
+    "guzzlehttp/guzzle": "~4",
+    "illuminate/database": "<5.0",
+    "aplyca/behat-contexts": "@dev",
     "phpunit/phpunit": "3.7.*"
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "config": {
     "bin-dir": "bin/"
   }
